@@ -1,3 +1,8 @@
+2011-05-31  Jakub Jelinek  <jakub@redhat.com>
+
+	PR rtl-optimization/49235
+	* gcc.dg/pr49235.c: New test.
+
 2011-05-31  Ira Rosen  <ira.rosen@linaro.org>
 
 	PR tree-optimization/49093
